inst/www/css/main.css
html, body {
  height: 100%;
}

.navbar {
  margin-bottom: 0px;
}

.navbar .progress {
  margin-bottom: 0px;
  margin-right: 1em;
  width: 150px;
}

.tab-content {
  padding-top: 5px;
}

.adjusted-rigth-padding {
   padding-right: 5px !important;
   margin-right: 0 !important;
}

.no-left-padding {
   padding-left: 0 !important;
   margin-left: 0 !important;
}

.form-group {
  margin-bottom: 5px;
}

.modal-body select {
  min-height: 200px;
}

.modal-footer {
  padding: 10px 15px;
}

#main {
  height: calc(100% - 50px);
  width: 100%;
  margin: 50px auto 0px;
}

#parcoords {
  width: 100%;
  height: 60%;
  margin: 10px 0px;
}

#controls {
  padding-left: 10px;
}

